Updated project name to 'Urban Planning Information Platform'

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "app": {
-    "title": "Lao UPIS",
-    "fullTitle": "Lao Urban Planning Information System"
+    "title": "Lao upip",
+    "fullTitle": "Lao Urban Planning Information Platform"
   },
   "nav": {
     "home": "Home",
